test/invalid-syntax/64371_missing_type_annotation/missing_type_annotation.agu
-- Author: 64371, Ricardo Costa

let str = "hello" -- syntax error: missing type annotation
